force-app/main/default/objects/DX_Internal__c/DX_Internal__c.object-meta.xml
<CustomObject>
    <label>DX Internal</label>
    <nameField>
        <label>Ucase Name(Name)</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DX Internal</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>