force-app/main/default/objects/DX_Internal__c/fields/Biz_Domain__c.field-meta.xml
<CustomField>
    <fullName>Biz_Domain__c</fullName>
    <label>Biz Domain</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BIZ!@</fullName>
            </value>
            <value>
                <fullName>Temp Biz 1</fullName>
            </value>
            <value>
                <fullName>Temp Biz 2</fullName>
            </value>
            <value>
                <fullName>test123</fullName>
            </value>
            <value>
                <fullName>title12311</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>