force-app/main/default/objects/DX_Internal__c/fields/Sub_Domain__c.field-meta.xml
<CustomField>
    <fullName>Sub_Domain__c</fullName>
    <label>Sub Domain</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Biz_Domain__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Temp Sub Biz 2</fullName>
            </value>
            <value>
                <fullName>Temp Sub Biz 1</fullName>
            </value>
            <value>
                <fullName>Sub Biz1</fullName>
            </value>
            <value>
                <fullName>11121</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>