force-app/main/default/objects/DX_Internal__c/fields/Sub_Technology__c.field-meta.xml
<CustomField>
    <fullName>Sub_Technology__c</fullName>
    <label>Sub Technology</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sub Selenium</fullName>
            </value>
            <value>
                <fullName>Sub API</fullName>
            </value>
            <value>
                <fullName>techno</fullName>
            </value>
            <value>
                <fullName>Sub Java</fullName>
            </value>
            <value>
                <fullName>Code</fullName>
            </value>
            <value>
                <fullName>Core</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>