force-app/main/default/objects/DX_Internal__c/fields/Technology__c.field-meta.xml
<CustomField>
    <fullName>Technology__c</fullName>
    <label>Technology</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>Dotnet</fullName>
            </value>
            <value>
                <fullName>Java</fullName>
            </value>
            <value>
                <fullName>Selenium</fullName>
            </value>
            <value>
                <fullName>Code1</fullName>
            </value>
            <value>
                <fullName>tech2</fullName>
            </value>
            <value>
                <fullName>Techn1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>